fixed navbar z-index issues.

--- a/client/less/theme.less
+++ b/client/less/theme.less
@@ -43,6 +43,9 @@ body {
     font-size: 21px;
     min-height: 50px;
 
+    // Must be over 9000
+    z-index: 9001;
+
     .navbar-toggle {
         margin-top: 8px;
     }
